--- a/foundry.toml
+++ b/foundry.toml
@@ -2,13 +2,13 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-solc = "0.8.22"
+solc = "0.8.20"
+evm_version = 'london'
 optimizer = true
 optimizer_runs = 200
 use_literal_content = true
 remappings = [
-    "@openzeppelin/=lib/openzeppelin-contracts/contracts/",
-	"@openzeppelinups/=lib/openzeppelin-contracts-upgradeable/contracts/",
+    "@openzeppelin/=lib/openzeppelin-contracts/contracts/"
 ]
 
 [rpc_endpoints]
